--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,13 @@
   font-family: "Roboto", sans-serif;
 }
 
+form {
+  label {
+    font-size: 13px;
+    font-weight: 600;
+  }
+}
+
 .logo {
   width: 100px;
 }
