--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,9 @@ footer {
   font-weight: 600;
   border-bottom: black solid 2px;
 }
+
+@media screen and (max-width: 576px) {
+  .ph-width {
+    width: 100%;
+  }
+}
