--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,13 @@
   padding: 0;
   font-family: "Roboto", sans-serif;
 }
+a {
+  text-decoration: none;
+}
 
 form {
   label {
-    font-size: 13px;
+    font-size: 0.8rem;
     font-weight: 600;
   }
 }
@@ -16,7 +19,7 @@ form {
 td,
 th,
 .page-link {
-  font-size: 10pt;
+  font-size: 0.8rem;
 }
 
 body {
