--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,11 @@ header {
 }
 footer {
   padding: 10px 0px;
+  p {
+    font-size: 9px;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 .nav-link.active {
