--- a/css/styles.css
+++ b/css/styles.css
@@ -70,3 +70,66 @@ button,
     width: 100%;
   }
 }
+
+@media print {
+  @page {
+    size: A4 portrait;
+    margin: 0.25in 0.25in 0.25in 0.25in;
+  }
+  .PrintHeader .img1 {
+    height: 1in;
+    width: 1in;
+  }
+  .PrintHeader .img2 {
+    height: 0.9in;
+    width: 0.9in;
+  }
+  .double-hr {
+    margin-top: 5px;
+    width: 100%;
+    height: 4px;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+  }
+  .header-space {
+    height: 150px;
+  }
+  .footer-space {
+    height: 100px;
+  }
+  .PrintHeader {
+    top: 0;
+    position: fixed;
+    width: 100%;
+  }
+  .PrintFooter {
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+  }
+  p {
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  table {
+    page-break-after: auto;
+  }
+
+  tr {
+    page-break-inside: avoid;
+    page-break-after: auto;
+  }
+
+  td {
+    page-break-inside: avoid;
+    page-break-after: auto;
+  }
+
+  thead {
+    display: table-header-group;
+  }
+
+  tfoot {
+    display: table-footer-group;
+  }
+}
