--- a/css/styles.css
+++ b/css/styles.css
@@ -132,4 +132,12 @@ button,
   tfoot {
     display: table-footer-group;
   }
+
+  .print-table {
+    td,
+    th {
+      border: 1px solid black;
+      font-size: 8pt;
+    }
+  }
 }
